[package]
name = "better-steam-cloud"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
dirs = "6.0.0"
globset = "0.4.18"
hostname = "0.4.1"
owo-colors = "4.2.2"
ssh2 = "0.9.5"
walkdir = "2.5.0"

[[bin]]
name = "bsc"
path = "src/main.rs"
